src/app/components/Card/index.module.scss
@use "src/app/colors";

.bottomSeparator {
  border-bottom: 1px solid colors.$separator-gray;
  height: 0px;
  margin-top: 12px;
  margin-bottom: 12px;
}

.card {
  $section-vertical-padding: 24px;
  $section-horizontal-padding: 40px;

  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  border: 1px solid colors.$border-gray;
  border-radius: 10px;
  background-color: white;

  box-shadow: 0px 9px 9px 0px colors.$verylight-gray;

  >section {
    &:first-child {
      padding-top: $section-vertical-padding !important;
      padding-bottom: $section-vertical-padding / 2 !important;
    }
    &:last-child {
      padding-top: $section-vertical-padding / 2 !important;
      padding-bottom: $section-vertical-padding !important;
    }
    &:only-child {
      padding-top: $section-vertical-padding !important;
      padding-bottom: $section-vertical-padding !important;
    }
  }

  .headerSection {
    display: flex;
    flex-direction: column;
    row-gap: 8px;
    padding-left: $section-horizontal-padding;
    padding-right: $section-horizontal-padding;
    padding-top: $section-vertical-padding;
    padding-bottom: $section-vertical-padding;

    font-weight: 700;

    .header {
      font-size: 20px;
      line-height: 24px;
      color: rgba(35, 31, 32, 1);
    }
    .subheader {
      font-size: 16px;
      line-height: 19px;
      color: colors.$medium-gray;
    }
  }

  .contentSection {
    padding-left: $section-horizontal-padding;
    padding-right: $section-horizontal-padding;
    padding-bottom: $section-vertical-padding / 2;
    padding-top: $section-vertical-padding / 2;
  }
  .actionsSection {
    display: flex;
    justify-content: flex-end;
    column-gap: 16px;
    padding-left: $section-horizontal-padding;
    padding-right: $section-horizontal-padding;
    padding-top: $section-vertical-padding;
    padding-bottom: $section-vertical-padding;

    .action {
      font-size: 16px;
      padding-top: 10px;
      padding-bottom: 10px;
      width: 200px;
      border: none;
      border-radius: 5px;

      &.primaryBtn {
        background-color: rgb(205, 85, 85);
        color: white;
      }
      &.secondaryBtn {
        background-color: white;
        color: rgb(205, 85, 85);
      }
    }
  }
}

